<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:focusableInTouchMode="true" >

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilDay">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:id="@+id/etDay"
            android:layout_marginTop="10dp"
            android:hint="@string/htHintDay" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilDay"
        android:id="@+id/tilHour">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:id="@+id/etHr"
            android:hint="@string/htHintHour" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilHour"
        android:id="@+id/tilMin">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:id="@+id/etMin"
            android:hint="@string/htHintMinute" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilMin"
        android:id="@+id/tilTemp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etTemp"
            android:hint="@string/htHintTemp" />
    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/tilTemp">

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:text="@string/htBtnAddTxt"
            android:onClick="addSetting"
            android:hapticFeedbackEnabled="true" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:hapticFeedbackEnabled="true"
            android:onClick="updateSetting"
            android:text="@string/htBtnEditTxt" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:hapticFeedbackEnabled="true"
            android:onClick="deleteSetting"
            android:text="@string/htBtnDeleteTxt" />
    </FrameLayout>

</RelativeLayout>