<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/background_dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnBedroom"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:layout_alignParentLeft="true"
        android:background="@android:color/holo_red_light"
        android:text="@string/htBtnBedroomTxt"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHallway"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:layout_alignParentRight="true"
        android:background="@android:color/holo_blue_light"
        android:text="@string/htBtnHallwayTxt"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBasement"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="12dp"
        android:layout_alignParentLeft="true"
        android:background="@android:color/holo_orange_light"
        android:text="@string/htBtnBasementTxt"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnKitchen"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"
        android:layout_margin="12dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/htBtnKitchenTxt"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>
